Fix unit test for cherry-picked 573bf6d